--- a/home_lab/argocd_apps/apps/PV_secret.yaml
+++ b/home_lab/argocd_apps/apps/PV_secret.yaml
@@ -8,11 +8,13 @@ spec:
     name: in-cluster
     namespace: argocd
   source:
-    path: defaults/home-media_pv_secret
-    repoURL: https://github.com/D1NaR1us/helm_home-media
+    path: home_lab/defaults/home-media_pv_secret
+    repoURL: https://github.com/D1NaR1us/k8s_home_lab.git
     targetRevision: HEAD
   project: default
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
