--- a/home_lab/argocd_apps/apps/sonarr.yaml
+++ b/home_lab/argocd_apps/apps/sonarr.yaml
@@ -8,8 +8,8 @@ spec:
     name: in-cluster
     namespace: argocd
   source:
-    path: defaults/helm_media
-    repoURL: https://github.com/D1NaR1us/helm_home-media
+    path: home_lab/defaults/helm_media
+    repoURL: https://github.com/D1NaR1us/k8s_home_lab.git
     targetRevision: HEAD
   project: default
   syncPolicy:
