--- a/tools/4 - argocd/argo_values.yaml
+++ b/tools/4 - argocd/argo_values.yaml
@@ -20,14 +20,14 @@ extraObjects:
   - apiVersion: traefik.io/v1alpha1
     kind: IngressRoute
     metadata:
-      name: argocd-ingress
+      name: "{{ .Release.Name }}-ingress"
       namespace: argocd
     spec:
       entryPoints:
         - websecure
       routes:
         - kind: Rule
-          match: Host(`argocd.home.lab`)
+          match: "Host(`{{ .Release.Name }}.home.lab`)"
           services:
-            - name: argocd-test-server
+            - name: "{{ .Release.Name }}-server"
               port: 80
