--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -60,9 +60,12 @@ spec:
             memory: 500Mi
             cpu: 256m
           {{ if eq .Release.Name "jellyfin" }}
+            limits: null
+          {{ else }}
             limits:
               memory: 500Mi
               cpu: 500m
+          {{ end }}
           
       volumes:
       - name: hm-volume
