--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -53,7 +53,7 @@ spec:
           mountPath: ./downloads
           subPath: ./home-media/downloads
         - name: cephfs-volume
-          {{ if not .Release.Name "torrent" }}
+          {{ if ne .Release.Name "torrent" }}
           mountPath: ./config
           subPath: ./home-media/{{ .Release.Name }}/config
           {{ end }}
