--- a/home_lab/argocd_apps/apps/PV_secret.yaml
+++ b/home_lab/argocd_apps/apps/PV_secret.yaml
@@ -1,20 +1,20 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata: 
-  name: pv-secret
-  namespace: argocd
-spec: 
-  destination:
-    name: in-cluster
-    namespace: argocd
-  source:
-    path: home_lab/defaults/home-media_pv_secret
-    repoURL: https://github.com/D1NaR1us/k8s_home_lab.git
-    targetRevision: HEAD
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata: 
+#   name: pv-secret
+#   namespace: argocd
+# spec: 
+#   destination:
+#     name: in-cluster
+#     namespace: argocd
+#   source:
+#     path: home_lab/defaults/home-media_pv_secret
+#     repoURL: https://github.com/D1NaR1us/k8s_home_lab.git
+#     targetRevision: HEAD
+#   project: default
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
