--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -51,12 +51,12 @@ spec:
         volumeMounts:
         - name: hm-volume
           mountPath: ./downloads
-        #   subPath: ./Downloads
-        # {{ if ne .Release.Name "torrent" }}
-        # - name: cephfs-volume
-        #   mountPath: ./config
-        #   subPath: ./home-media/{{ .Release.Name }}/config
-        # {{ end }}
+          subPath: ./Downloads
+        {{ if ne .Release.Name ["sonarr","radarr] }}
+        - name: hm-volume
+          mountPath: ./config
+          subPath: ./home-media/{{ .Release.Name }}/config
+        {{ end }}
         resources:
           requests:
             memory: 500Mi
