--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -52,10 +52,11 @@ spec:
         - name: hm-volume
           mountPath: ./downloads
           subPath: ./Downloads
-        {{ if ne .Release.Name "sonarr" or "radarr }}
+        {{ if ne .Release.Name "sonarr" or "radarr" }}
         - name: hm-volume
           mountPath: ./config
           subPath: ./home-media/{{ .Release.Name }}/config
+        
         {{ end }}
         resources:
           requests:
