--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -33,10 +33,10 @@ spec:
         env:
         - name: TZ
           value: "Asia/Yerevan"
-        - name: PUID
-          value: "1000"
-        - name: PGID
-          value: "1000"
+        # - name: PUID
+        #   value: "1000"
+        # - name: PGID
+        #   value: "1000"
         ports:
         - name: {{ .Release.Name }}-web
           # containerPort: {{ .Values.container.port }}
