--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -52,19 +52,19 @@ spec:
         - name: hm-volume
           mountPath: ./downloads
           subPath: ./data_my/Downloads
-        {{ if eq .Release.Name "torrent" }}
+        # {{ if eq .Release.Name "torrent" }}
         - name: hm-volume
           mountPath: ./config
           subPath: ./data_my/home-media/{{ .Release.Name }}/config
-        {{ else if eq .Release.Name "jackett" }}
-        - name: hm-volume
-          mountPath: ./config
-          subPath: ./data_my/home-media/{{ .Release.Name }}/config
-        {{ else if eq .Release.Name "homepage" }}
-        - name: hm-volume
-          mountPath: ./config
-          subPath: ./data_my/home-media/{{ .Release.Name }}/config
-        {{ end }}
+        # {{ else if eq .Release.Name "jackett" }}
+        # - name: hm-volume
+        #   mountPath: ./config
+        #   subPath: ./data_my/home-media/{{ .Release.Name }}/config
+        # {{ else if eq .Release.Name "homepage" }}
+        # - name: hm-volume
+        #   mountPath: ./config
+        #   subPath: ./data_my/home-media/{{ .Release.Name }}/config
+        # {{ end }}
         resources:
           requests:
             memory: 500Mi
@@ -81,6 +81,7 @@ spec:
       - name: hm-volume
         persistentVolumeClaim:
           claimName: hm-claim
+          readOnly: false
       # - name: cephfs-volume
       #   cephfs:
       #     monitors:
