--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -52,12 +52,12 @@ spec:
         - name: hm-volume
           mountPath: ./downloads
           subPath: ./data_my/Downloads
-          readOnly: false
+          # readOnly: false
         # {{ if eq .Release.Name "torrent" }}
         - name: hm-volume
           mountPath: ./config
           subPath: ./data_my/home-media/{{ .Release.Name }}/config
-          readOnly: false
+          # readOnly: false
         # {{ else if eq .Release.Name "jackett" }}
         # - name: hm-volume
         #   mountPath: ./config
