--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -64,6 +64,10 @@ spec:
         - name: hm-volume
           mountPath: ./config
           subPath: ./data_my/home-media/{{ .Release.Name }}/config
+        {{ else if eq .Release.Name "sonarr" }}
+        - name: hm-volume
+          mountPath: ./config
+          subPath: ./data_my/home-media/{{ .Release.Name }}/config
         {{ end }}
         resources:
           requests:
