--- a/home_lab/defaults/home-media_pv_secret/HM-secret.yaml
+++ b/home_lab/defaults/home-media_pv_secret/HM-secret.yaml
@@ -1,7 +1,7 @@
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: ceph-secret
-#   namespace: home-media
-# data:
-#   key: QVFCWCtTQmxjREtZR1JBQUVZTStBMWlpdk0zY1k5aUxmaXd5WGc9PQ==
+apiVersion: v1
+kind: Secret
+metadata:
+  name: ceph-secret
+  namespace: home-media
+data:
+  key: QVFDMjVUMW1TZVlyT2hBQS94dlJaNXhISlhyMUhaTEtVS1owTWc9PQo=
