--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -52,7 +52,7 @@ spec:
         - name: hm-volume
           mountPath: ./data/downloads
           subPath: ./data_my/Downloads
-        - name: hm-volume
+        - name: cephfs-volume
           mountPath: ./config
           subPath: ./data_my/home-media/{{ .Release.Name }}/config
         resources:
@@ -66,3 +66,11 @@ spec:
       - name: hm-volume
         persistentVolumeClaim:
           claimName: hm-claim
+      - name: cephfs-volume
+        cephfs:
+          monitors:
+            - 192.168.50.10
+          user: admin
+          secretRef:
+            name: ceph-secret
+          readOnly: false
