--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -19,7 +19,7 @@ spec:
         app: {{ .Release.Name }}-app
     spec:
       nodeSelector:
-        {{ if eq .Release.Name "jellyfin" }}workload: gpu
+        {{ if eq .Release.Name "jellyfin" }}workload: "gpu"
       containers:
       - name: {{ .Release.Name }}
         {{ if eq .Release.Name "sonarr" }}image: linuxserver/sonarr
