--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -20,6 +20,7 @@ spec:
     spec:
       nodeSelector:
         {{ if eq .Release.Name "jellyfin" }}workload: "gpu"
+        {{ end }}
       containers:
       - name: {{ .Release.Name }}
         {{ if eq .Release.Name "sonarr" }}image: linuxserver/sonarr
@@ -65,6 +66,7 @@ spec:
             memory: 500Mi
             cpu: 500m
             {{ if eq .Release.Name "jellyfin" }}gpu.intel.com: "1"
+            {{ end }}
       volumes:
       - name: hm-volume
         persistentVolumeClaim:
