--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -67,6 +67,8 @@ spec:
           limits:
             memory: 500Mi
             cpu: 500m
+            {{ if eq .Release.Name "jellyfin" }}gpu.intel.com/i915: "1"
+            {{ end }}
       volumes:
       - name: hm-volume
         persistentVolumeClaim:
