--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -58,9 +58,10 @@ spec:
         - name: hm-volume
           mountPath: ./config
           subPath: ./data_my/home-media/{{ .Release.Name }}/config
-        {{ if eq .Release.Name "jellyfin" }}mountPath: /dev/dri
-          name: dev-dri
-          {{ end }}
+        {{ if eq .Release.Name "jellyfin" }}
+        - name: dev-dri
+          mountPath: /dev/dri
+        {{ end }}
         resources:
           requests:
             memory: 500Mi
@@ -74,10 +75,12 @@ spec:
       - name: hm-volume
         persistentVolumeClaim:
           claimName: hm-claim
+      {{ if eq .Release.Name "jellyfin" }}
       - name: dev-dri
         hostPath:
           path: /dev/dri
           type: Directory
+      {{ end }}
       # - name: localdirs-volume
       # hostPath:
       #   path: /mnt/home-media-configs
