--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -60,9 +60,7 @@ spec:
           subPath: ./data_my/home-media/{{ .Release.Name }}/config
         {{ if eq .Release.Name "jellyfin" }}
         - name: dev-dri-card
-          mountPath: /dev/dri/card1
-        - name: dev-dri-render
-          mountPath: /dev/dri/renderD128
+          mountPath: /dev/dri
         {{ end }}
         resources:
           requests:
@@ -80,12 +78,12 @@ spec:
       {{ if eq .Release.Name "jellyfin" }}
       - name: dev-dri-card
         hostPath:
-          path: /dev/dri/card1
+          path: /dev/dri
           type: CharDevice
-      - name: dev-dri-render
-        hostPath:
-          path: /dev/dri/renderD128
-          type: CharDevice
+      # - name: dev-dri-render
+      #   hostPath:
+      #     path: /dev/dri/renderD128
+      #     type: CharDevice
       # - name: dev-dri
       #   hostPath:
       #     path: /dev/dri
