--- a/home_lab/defaults/helm_media/templates/HM-app.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-app.yaml
@@ -18,20 +18,12 @@ spec:
         main: hm-app
         app: {{ .Release.Name }}-app
     spec:
-      nodeSelector:
-        {{ if eq .Release.Name "jellyfin" }}workload: "gpu"
-        {{ end }}
+      # nodeSelector:
+      #   {{ if eq .Release.Name "jellyfin" }}workload: "gpu"
+      #   {{ end }}
       containers:
       - name: {{ .Release.Name }}
-        {{ if eq .Release.Name "sonarr" }}image: linuxserver/sonarr
-        {{ else if eq .Release.Name "radarr" }}image: linuxserver/radarr
-        {{ else if eq .Release.Name "torrent" }}image: linuxserver/transmission
-        {{ else if eq .Release.Name "jackett" }}image: linuxserver/jackett
-        {{ else if eq .Release.Name "jellyfin" }}image: linuxserver/jellyfin
-        {{ else if eq .Release.Name "homepage" }}image: ghcr.io/gethomepage/homepage:latest
-        {{ else }}image: {{ .Values.container.image }}
-        {{ end }}
-        # image: {{ .Values.container.image }}
+        image: {{ .Values.container.image }}
         imagePullPolicy: Always
         env:
         - name: TZ
@@ -42,15 +34,7 @@ spec:
           value: "1000"
         ports:
         - name: {{ .Release.Name }}-web
-          # containerPort: {{ .Values.container.port }}
-          {{ if eq .Release.Name "sonarr" }}containerPort: 8989
-          {{ else if eq .Release.Name "radarr" }}containerPort: 7878
-          {{ else if eq .Release.Name "torrent" }}containerPort: 9091
-          {{ else if eq .Release.Name "jackett" }}containerPort: 9117
-          {{ else if eq .Release.Name "jellyfin" }}containerPort: 8096
-          {{ else if eq .Release.Name "homepage" }}containerPort: 3000
-          {{ else }}containerPort: {{ .Values.container.port }}
-          {{ end }}
+          containerPort: {{ .Values.container.port }}
         volumeMounts:
         - name: hm-volume
           mountPath: ./data/downloads
@@ -58,12 +42,6 @@ spec:
         - name: hm-volume
           mountPath: ./config
           subPath: ./data_my/home-media/{{ .Release.Name }}/config
-        # {{ if eq .Release.Name "jellyfin" }}
-        # - name: dev-dri-card1
-        #   mountPath: /dev/dri/card1
-        # - name: dev-dri-render
-        #   mountPath: /dev/dri/renderD128
-        # {{ end }}
         resources:
           requests:
             memory: 500Mi
@@ -71,43 +49,7 @@ spec:
           limits:
             memory: 500Mi
             cpu: 500m
-            {{ if eq .Release.Name "jellyfin" }}
-            gpu.intel.com/i915: "1"
-            {{ end }}
-        # {{ if eq .Release.Name "jellyfin" }}
-        # securityContext:
-        #   capabilities:
-        #     add: ["SYS_ADMIN"]
-        #   devices:
-        #     - name: /dev/dri/card1
-        #     - name: /dev/dri/renderD128
-        # {{ end }}
       volumes:
       - name: hm-volume
         persistentVolumeClaim:
           claimName: hm-claim
-      # {{ if eq .Release.Name "jellyfin" }}
-      # - name: dev-dri-card1
-      #   hostPath:
-      #     path: /dev/dri/card1
-      #     type: CharDevice
-      # - name: dev-dri-render
-      #   hostPath:
-      #     path: /dev/dri/renderD128
-      #     type: CharDevice
-      # - name: dev-dri
-      #   hostPath:
-      #     path: /dev/dri
-      #     type: Directory
-      # {{ end }}
-      # - name: localdirs-volume
-      # hostPath:
-      #   path: /mnt/home-media-configs
-      # - name: cephfs-volume
-      #   cephfs:
-      #     monitors:
-      #       - 192.168.50.10
-      #     user: admin
-      #     secretRef:
-      #       name: ceph-secret
-      #     readOnly: false
