--- a/home_lab/defaults/helm_media/templates/HM-svc.yaml
+++ b/home_lab/defaults/helm_media/templates/HM-svc.yaml
@@ -8,19 +8,5 @@ spec:
     app: {{ .Release.Name }}-app
   ports:
   - name: {{ .Release.Name }}-web
-    {{ if eq .Release.Name "sonarr" }}port: 8989
-    {{ else if eq .Release.Name "radarr" }}port: 7878
-    {{ else if eq .Release.Name "torrent" }}port: 9091
-    {{ else if eq .Release.Name "jackett" }}port: 9117
-    {{ else if eq .Release.Name "jellyfin" }}port: 8096
-    {{ else if eq .Release.Name "homepage" }}port: 3000
-    {{ else }}port: {{ .Values.container.port }}
-    {{ end }}
-    {{ if eq .Release.Name "sonarr" }}targetPort: 8989
-    {{ else if eq .Release.Name "radarr" }}targetPort: 7878
-    {{ else if eq .Release.Name "torrent" }}targetPort: 9091
-    {{ else if eq .Release.Name "jackett" }}targetPort: 9117
-    {{ else if eq .Release.Name "jellyfin" }}targetPort: 8096
-    {{ else if eq .Release.Name "homepage" }}targetPort: 3000
-    {{ else }}port: {{ .Values.container.port }}
-    {{ end }}
+    port: {{ .Values.container.port }}
+    targetPort: {{ .Values.container.port }}
