--- a/home_lab/argocd_apps/apps/sonarr.yaml
+++ b/home_lab/argocd_apps/apps/sonarr.yaml
@@ -11,6 +11,12 @@ spec:
     path: home_lab/defaults/helm_media
     repoURL: https://github.com/D1NaR1us/k8s_home_lab.git
     targetRevision: HEAD
+    helm:
+      values: |
+        container:
+          image: linuxserver/sonarr:latest
+          port: 8989
+          targetPort: 8989
   project: default
   syncPolicy:
     automated:
