--- a/home_lab/argocd_apps/apps/torrent.yaml
+++ b/home_lab/argocd_apps/apps/torrent.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata: 
-  name: torrent
+  name: bittorrent
   namespace: argocd
 spec: 
   destination:
