--- a/home_lab/argocd_apps/apps/overseerr.yaml
+++ b/home_lab/argocd_apps/apps/overseerr.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata: 
-  name: prowlarr
+  name: overseerr
   namespace: argocd
 spec: 
   destination:
@@ -14,9 +14,9 @@ spec:
     helm:
       values: |
         container:
-          image: linuxserver/prowlarr:latest
-          port: 9696
-          targetPort: 9696
+          image: linuxserver/overseerr:latest
+          port: 5055
+          targetPort: 5055
   project: default
   syncPolicy:
     automated:
