--- a/home_lab/argocd_apps/apps/jellyfin.yaml
+++ b/home_lab/argocd_apps/apps/jellyfin.yaml
@@ -1,26 +1,26 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata: 
-  name: jellyfin
-  namespace: argocd
-spec: 
-  destination:
-    name: in-cluster
-    namespace: argocd
-  source:
-    path: home_lab/defaults/helm_media
-    repoURL: https://github.com/D1NaR1us/k8s_home_lab.git
-    targetRevision: HEAD
-    helm:
-      values: |
-        container:
-          image: linuxserver/jellyfin:latest
-          port: 8096
-          targetPort: 8096
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata: 
+#   name: jellyfin
+#   namespace: argocd
+# spec: 
+#   destination:
+#     name: in-cluster
+#     namespace: argocd
+#   source:
+#     path: home_lab/defaults/helm_media
+#     repoURL: https://github.com/D1NaR1us/k8s_home_lab.git
+#     targetRevision: HEAD
+#     helm:
+#       values: |
+#         container:
+#           image: linuxserver/jellyfin:latest
+#           port: 8096
+#           targetPort: 8096
+#   project: default
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
