--- a/home_lab/argocd_apps/apps/vault_test/secret.yaml
+++ b/home_lab/argocd_apps/apps/vault_test/secret.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: default
 type: Opaque
 stringData:
-  password: <path:kv/data/myapp#password>
+  password: <path:kv/data/my-app#password>
