Add annotation and update password field in secret

--- a/home_lab/argocd_apps/apps/vault_test/secret.yaml
+++ b/home_lab/argocd_apps/apps/vault_test/secret.yaml
@@ -3,6 +3,8 @@ kind: Secret
 metadata:
   name: my-secret
   namespace: default
+  annotations:
+    avp.kubernetes.io/path: "kv/data/myapp" 
 type: Opaque
 stringData:
-  password: <path:kv/data/myapp#password>
+  password: <password>
