Update password reference in secret.yaml

--- a/home_lab/argocd_apps/apps/vault_test/secret.yaml
+++ b/home_lab/argocd_apps/apps/vault_test/secret.yaml
@@ -7,4 +7,4 @@ metadata:
     avp.kubernetes.io/path: "kv/data/myapp" 
 type: Opaque
 stringData:
-  password: <password>
+  password: <path:kv/data/my-app#password>
