--- a/home_lab/argocd_apps/apps/vault_test/secret.yaml
+++ b/home_lab/argocd_apps/apps/vault_test/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: my-secret
+  namespace: default
   annotations:
     avp.kubernetes.io/path: "kv/data/myapp" 
 type: Opaque
